# OrangePi_CedarX

./: README.md
cedarx/: Makefile.am  Makefile.inc  OrangePi_CedarX.sh  bootstrap  config.mk  configure.ac  libcdxlist.mk  version.h
cedarx/android_adapter/awplayer/: Android.mk  awLogRecorder.cpp  awLogRecorder.h  awStreamListener.h  awStreamingSource.cpp  awStreamingSource.h  awplayer.cpp  awplayer.h  subtitleUtils.cpp  subtitleUtils.h
cedarx/android_adapter/iptv/CTC_MediaProcessor/: CTC_MediaProcessorImpl.cpp  CTC_MediaProcessorImpl.h
cedarx/android_adapter/iptv/demo/: Android.mk_d  CTC_wrapper.cpp  CTC_wrapper.h  demoplayer.cpp  iptvDemo.patch  mediaInfo.h
cedarx/android_adapter/iptv/demux/: Android.mk  tsdemux.c  tsdemux.h  tsdemux_i.h
cedarx/android_adapter/iptv/include/: CTC_MediaProcessor.h  aformat.h
cedarx/android_adapter/metadataretriever/: Android.mk  awmetadataretriever.cpp  awmetadataretriever.h
cedarx/android_adapter/output/: Android.mk  VideoFrameScheduler.cpp  VideoFrameSchedulerWrap.cpp  deinterlace.cpp  layerControl.cpp  outputCtrl.h  soundControl.cpp  soundControl_null.cpp  subtitleControl.cpp
cedarx/android_adapter/output/subtitleNativeDisplay/: subtitleNativeDisplay.cpp  subtitleNativeDisplay.h  subtitleNativeDisplayApi.h
cedarx/awrecorder/: AudioEncodeComponent.c  EncDataComponent.c  EncDataComponent.h  VideoEncodeComponent.c  VideoEncodeComponent.h  awencoder.c  awencoder.h
cedarx/config/: Android.mk  astar_config.mk  cheetah_cedarx.conf  cheetah_cmcc_cedarx.conf  cheetah_config.mk  dolphin_config.mk  eagle_cedarx.conf  eagle_config.mk  magton_config.mk  octopus_config.mk  t3_config.mk  tulip_config.mk
cedarx/demo/: Makefile  Makefile.am
cedarx/demo/cacheTest/: Android.mk  cache.cpp
cedarx/demo/demoVdecoder/: Android.mk  Makefile.am  demoVdecoder.c  vdecoderdemo
cedarx/demo/demoVdecoder/doc/: readme.txt
cedarx/demo/demoVencVdec/: Android.mk
cedarx/demo/demoVencoder/: Android.mk  EncoderTest.c  Makefile.am  vencoderdemo
cedarx/demo/jpegdemo/: Makefile.am  demojpeg.c  jpegdemo
cedarx/demo/muxtest/: Makefile.am  MuxerWriter.c  MuxerWriter.h  muxdemo  testVideoMuxer.c
cedarx/demo/parserdemo/: Makefile.am  parserdemo  testParser.c
cedarx/demo/recoderdemo/: Makefile.am  RecoderWriter.c  RecoderWriter.h  recoderdemo  recoderdemo.c
cedarx/demo/xmetademo/: Makefile.am  retriverdemo  xmetademo.c
cedarx/demo/xplayerdemo/: Makefile  Makefile.am  Makefile.in  deinterlace_null.c  display_H3.h  layerControl_de.c  layerControl_null.c  soundControl_alsa.c  soundControl_null.c  subtitleControl_null.c  xplayerdemo  xplayerdemo.c
cedarx/demo/xplayerdemo/.deps/: xplayerdemo-deinterlace_null.Po  xplayerdemo-layerControl_de.Po  xplayerdemo-layerControl_null.Po  xplayerdemo-soundControl_null.Po  xplayerdemo-subtitleControl_null.Po  xplayerdemo-xplayerdemo.Po
cedarx/demo/xplayerdemo/.libs/: xplayerdemo
cedarx/libcore/: Makefile.am
cedarx/libcore/base/: Android.mk  CdxParseUrl.c  Makefile.am
cedarx/libcore/base/include/: CdxSocketUtil.h  CdxTypes.h
cedarx/libcore/common/: Android.mk
cedarx/libcore/common/iniparser/: iniparser.c  iniparserapi.c
cedarx/libcore/muxer/aac/: CdxAacMuxer.c  CdxAacMuxer.h
cedarx/libcore/muxer/base/: CdxFsCache.c  CdxFsSimpleCache.c  CdxFsWriter.c  CdxMuxer.c  CdxMuxerBaseDef.h  CdxTsemaphore.c
cedarx/libcore/muxer/include/: CdxMuxer.h  CdxWriter.h
cedarx/libcore/muxer/mp4/: CdxMp4Muxer.c  CdxMp4Muxer.h  CdxMp4MuxerLib.c  Makefile.am
cedarx/libcore/muxer/ts/: CdxTsMuxer.c  CdxTsMuxer.h  CdxTsMuxerCfg.h  CdxTsMuxerLib.c  Makefile.am
cedarx/libcore/parser/: Makefile.am
cedarx/libcore/parser/AwRawStream/: AwRawStreamParser.c
cedarx/libcore/parser/aac/: CdxAacParser.h
cedarx/libcore/parser/aiff/: CdxAiffParser.c
cedarx/libcore/parser/amr/: CdxAmrParser.c
cedarx/libcore/parser/ape/: CdxApeParser.c  CdxApeParser.h
cedarx/libcore/parser/asf/: AsfParser.c  AsfParserItf.c
cedarx/libcore/parser/atrac/: CdxAtracParser.c
cedarx/libcore/parser/avi/: CdxAviDepack.c  CdxAviDepackSequence.c  CdxAviParser.c
cedarx/libcore/parser/base/: Android.mk  CdxParser.c  Makefile.am
cedarx/libcore/parser/bd/: CdxBdParser.c
cedarx/libcore/parser/caf/: CdxCafParser.c
cedarx/libcore/parser/dash/: CdxDashParser.c
cedarx/libcore/parser/dsd/: CdxDsdParser.c
cedarx/libcore/parser/env/: EnvParserItf.c
cedarx/libcore/parser/flac/: CdxFlacParse.c
cedarx/libcore/parser/flv/: CdxFlvParser.c
cedarx/libcore/parser/g729/: CdxG729Parser.c
cedarx/libcore/parser/hls/: CdxHlsParser.c  CdxHlsParser.h
cedarx/libcore/parser/id3/: Android.mk  CdxId3Parser.c  CdxId3Parser.h  Makefile.am
cedarx/libcore/parser/include/: CdxParser.h
cedarx/libcore/parser/m3u9/: CdxM3u9Parser.c
cedarx/libcore/parser/mkv/: CdxMkvParser.c  CdxMkvParser.h  CdxMkvParserImpl.c
cedarx/libcore/parser/mov/: Android.mk  CdxMovParser.c  CdxMovParser.h  CdxMovParserImpl.c  Makefile.am
cedarx/libcore/parser/mp3/: Android.mk  CdxMp3Parser.c  Makefile.am
cedarx/libcore/parser/mpg/: CdxMpgParser.c  CdxMpgParser.h  CdxMpgParserImpl.h  mpgOpen.c  mpgRead.c
cedarx/libcore/parser/ogg/: CdxOggParser.c
cedarx/libcore/parser/playlist/: CdxPlaylistParser.c
cedarx/libcore/parser/pmp/: CdxPmpParser.c
cedarx/libcore/parser/remux/: CdxRemuxParser.c
cedarx/libcore/parser/sstr/: AwSstrParser.c
cedarx/libcore/parser/ts/: CdxTsParser.c  CdxTsParser.h  MediaProbe.c
cedarx/libcore/parser/wav/: CdxWavParser.c
cedarx/libcore/parser/wvm/: Android.mk  Extractor.cpp  Extractor.h  (+1 more)
cedarx/libcore/playback/: Android.mk  Makefile.am  audioDecComponent.c  audioRenderComponent.c  framerateEstimater.c  player.c  player_i.h  streamManager.c  subtitleRenderComponent.h  videoDecComponent.c  videoRenderComponent.h  videoRenderComponent_newDisplay.c
cedarx/xmetadataretriever/: Android.mk  Makefile.am  xmetadataretriever.c
cedarx/xmetadataretriever/include/: xmetadataretriever.h
cedarx/xplayer/: Android.mk  Makefile.am  cache.c  cache.h  demuxComponent.c  demuxComponent.h  xplayer.c
cedarx/xplayer/include/: mediaInfo.h  xplayer.h
(+35 files in other folders)
